Bug 947848 - Change the visibility of debugger stacktrace breadcrumbs. r=vp
UltraBlame original commit: 07ae09266578b2d50b1ddfe8ed697d89ed08dac9

--- a/browser/devtools/debugger/debugger.css
+++ b/browser/devtools/debugger/debugger.css
@@ -226,3 +226,18 @@ display
 none
 ;
 }
+#
+body
+[
+layout
+=
+vertical
+]
+#
+stackframes
+{
+visibility
+:
+hidden
+;
+}
